bluec-tests/tests/invalid/typedef/redeclare_symbol_same_scope2.c
int main(void) {
    int AA;
    typedef int AA;
    return 0;
}